--- a/Mediroot.Autocopy/App.config
+++ b/Mediroot.Autocopy/App.config
@@ -4,8 +4,8 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" requirePermission="false"/>
   </configSections>
   <appSettings>
-    <add key="src" value="C:\Users\Robert\Downloads"/>
-    <add key="dst" value="\\192.168.1.200\publiczny\ewus"/>
+    <add key="src" value="src TODO"/>
+    <add key="dst" value="\\public_serv_ip\dst TODO"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
